# PyLucas

./: .gitignore  Build.bat  ChangeLog.txt  MANIFEST.in  README.md  ReadMe.txt  Requirements.txt  UpLoad.gz.bat  UpLoad.whl.bat  pyproject.toml  requirements.txt  setup.py
Build&Release/: Build.bat  UpLoad.gz.bat  UpLoad.whl.bat
Example/: Example.py
Example/Log/: 2025-01-29 14-14-07.txt  2025-01-29 14-14-48.txt  2025-01-29 14-15-15.txt  2025-01-29 14-25-07.txt  2025-01-29 14-25-26.txt  2025-01-29 14-25-51.txt  2025-01-29 15-51-45.txt  2025-01-29 15-52-20.txt  2025-01-29 15-56-55.txt
Log/: 2025-04-18 08-50-15.txt  2025-04-18 08-50-49.txt
PyLucas/: __MetaData__.py  __init__.py
PyLucas-3.1.1/: PKG-INFO
PyLucas-3.1.1/PyLucas/: __MetaData__.py
PyLucas-3.1.1/PyLucas/Class/: ConfigEditor.py  LogManager.py
PyLucas.egg-info/: PKG-INFO  SOURCES.txt
PyLucas/Class/: ConfigEditor.py  LogManager.py
PyLucas/Func/: Function.py  __init__.py
PyLucas/Function/: Function.py
Test/: Test_Function.py  Test_LogManager.py
Test/Log/: 2025-01-28 10-05-25.txt
example/: ConfigEditor.py  LogManager.py
src/pylucas/: __init__.py
src/pylucas/Class/: CLI.py  ConfigEditor.py  DualCaseSet.py  KbdCapture.py  LogManager.py  Result.py
src/pylucas/Function/: Function.py  __init__.py
src/pylucas/_NetWork/: Downloader.py
src/pylucas/_RPA/: main.py
src/pylucas/fileops/: ConfigEditor.py  Function.py  __init__.py
src/pylucas/log/: Class.py  Function.py  LogManager.py  __init__.py
src/pylucas/rwxl/: Function.py
src/pylucas/struct/: Struct.py
tests/: Test.py  Test_Function.py  Test_LogManager.py
tests/Log/: 2025-01-28 10-05-44.txt
tools/BuildnRelease/: Build.bat  Publish.bat
