[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "readme"]

name = "PyLucas"
description = "Personal utility library for Nuhil Lucas."
requires-python = "==3.11.9"
keywords = ["PyLucas", "NuhilLucas", "LuLuLuOfficial"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]
license = {file = "LICENSE"}

# 作者与维护者
authors = [
    {name="Nuhil Lucas", email="XFramilRainX@163.com"}
]
maintainers = [
    {name = "Nuhil Lucas", email = "XFramilRainX@163.com"}
]

dependencies = [
    "tomli_w"
]

[project.optional-dependencies]
ASCIIArt = ["pyfiglet"]

[project.urls]
Homepage = "https://github.com/LuLuLuOfficial/PyLucas"
Documentation = "https://github.com/LuLuLuOfficial/PyLucas/blob/main/README.md"
Repository = "https://github.com/LuLuLuOfficial/PyLucas"
Issues = "https://github.com/LuLuLuOfficial/PyLucas/issues"
Changelog = "https://github.com/LuLuLuOfficial/PyLucas/blob/main/ChangeLog.txt"

[tool.setuptools.dynamic]
version = {attr = "PyLucas.__MetaData__.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default
